--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>InstaFollowPlus</title>
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+
+    <header>
+        <h1>InstaFollowPlus</h1>
+    </header>
+
+    <div class="container">
+        <div>
+            <p class="ar-text">
+                مرحباً أيها المتسابق في هذا الموقع يمكنك زيادة عدد متابعيك عن طريق 
+                الإعلان عن حسابك في الانستقرام اضغط على الزر أدناه للمتابعة
+            </p>
+            <a href="login.html">
+                <button class="startbtn ar-text center-text">ابدأ</button>
+            </a>  
+        </div>  
+    </div>
+
+    <script src="js/utils.js"></script>
+</body>
+</html>
